test/functions/bradc/intUint3.good
intUint3.chpl:11: error: ambiguous call 'foo(1: uint(64), 2: uint(64))'
intUint3.chpl:1: note: candidates are: foo(x: int, y: uint)
intUint3.chpl:5: note:                 foo(x: uint, y: int)
